Add CF types, changed / response, Add TS linting

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,6 +2,11 @@
 {
   "extends": "./.nitro/types/tsconfig.json",
   "compilerOptions": {
-    "strict": true
-  }
+    "strict": true,
+    "skipLibCheck": true,
+  },
+  "exclude": [
+    "node_modules",
+    ".output"
+  ],
 }
