--- a/api/package.json
+++ b/api/package.json
@@ -4,10 +4,13 @@
     "build": "nitro build",
     "dev": "nitro dev",
     "prepare": "nitro prepare",
-    "preview": "node .output/server/index.mjs"
+    "preview": "node .output/server/index.mjs",
+    "lint:types": "tsc --noEmit"
   },
   "devDependencies": {
-    "nitropack": "latest"
+    "nitro-cloudflare-dev": "^0.2.2",
+    "nitropack": "latest",
+    "typescript": "^5.8.3"
   },
   "packageManager": "pnpm@9.14.2",
   "dependencies": {
