--- a/web/package.json
+++ b/web/package.json
@@ -24,8 +24,10 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@odds-and-endpoints/types": "workspace:*",
     "@nuxt/schema": "^3.17.6",
-    "tailwindcss": "^3.4.0"
+    "@odds-and-endpoints/types": "workspace:*",
+    "nitro-cloudflare-dev": "^0.2.2",
+    "tailwindcss": "^3.4.0",
+    "wrangler": "4.13.2"
   }
 }
