--- a/web/wrangler.jsonc
+++ b/web/wrangler.jsonc
@@ -48,11 +48,11 @@
   "assets": {
     "binding": "ASSETS",
     "directory": "./.output/public/"
-  }
+  },
 
   /**
    * Service Bindings (communicate between multiple Workers)
    * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
    */
-  // "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
+  "services": [{ "binding": "API", "service": "odds-and-endpoints-api" }]
 }
