--- a/api/package.json
+++ b/api/package.json
@@ -10,8 +10,10 @@
   "scripts": {
     "build": "nitro build",
     "dev": "nitro dev",
+    "dev:wrangler": "wrangler dev",
     "prepare": "nitro prepare",
     "preview": "node .output/server/index.mjs",
+    "preview:wrangler": "wrangler --cwd .output/server dev",
     "lint:types": "tsc --noEmit"
   },
   "devDependencies": {
