--- a/api/wrangler.toml
+++ b/api/wrangler.toml
@@ -1,4 +1,5 @@
-name = "odds-api"
-compatibility_date = "2024-09-19"
+name = "odds-and-endpoints-api"
+compatibility_date = "2025-04-24"
 main = "./.output/server/index.mjs"
+compatibility_flags = [ "nodejs_compat" ]
 assets = { directory = "./.output/public/", binding = "ASSETS" }
