--- a/web/wrangler.jsonc
+++ b/web/wrangler.jsonc
@@ -48,5 +48,10 @@
    * Service Bindings (communicate between multiple Workers)
    * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
    */
-  "services": [{ "binding": "API", "service": "odds-and-endpoints-api" }]
+  "services": [
+    {
+      "binding": "API",
+      "service": "odds-and-endpoints-api"
+    }
+  ]
 }
