--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -7,7 +7,8 @@
     "baseUrl": ".",
     "paths": {
       "@odds-and-endpoints/types": ["../types/src/index.ts"]
-    }
+    },
+    "types": ["@cloudflare/unenv-preset"]
   },
   "exclude": ["node_modules", ".output"]
 }
