--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
     "dev": "wrangler dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "preview:wrangler": "npx wrangler --cwd ./ dev",
+    "preview:wrangler": "pnpm build && pnpm dlx wrangler dev -c wrangler.jsonc -c ../api/wrangler.toml",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
@@ -27,7 +27,6 @@
   "devDependencies": {
     "@nuxt/schema": "^3.17.6",
     "@odds-and-endpoints/types": "workspace:*",
-    "nitro-cloudflare-dev": "^0.2.2",
     "tailwindcss": "^3.4.0",
     "wrangler": "4.23.0"
   }
